<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">NEXT</string>
    <string name="previous">Previous</string>
    <string name="dont_have_account">Don’t have account?</string>
    <string name="hello_first_fragment"> Hellofirst fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="an_authentication_code_has_been_sent_to_n_91_987347xxx">An authentication code has been sent to</string>
    <string name="to_n_91_987347xxx"><font color='#193A4A'>(+91) 987347XXX</font></string>
    <string name="resend_otp_in">Resend OTP </string>
    <string name="timer"> <font color='#C31D53'><annotation font='bold'> (60)</annotation></font></string>
    <string name="forgot_password_resend_in">Resend in</string>
    <string name="forgot_password_resend">Resend</string>
    <string name="didn_t_receive_otp_resend">Didn\'t receive OTP?</string>
    <string name="_2_in_non_lorem_efficitur_convallis_lorem_eget_placerat" tools:ignore="DuplicateDefinition">2.In non lorem efficitur, convallis lorem eget, placerat</string>
    <string name="add_credit_cards_bnpl"><![CDATA[Add Credit Cards & BNPL]]></string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="this_is_necessary_to_calculate_your_n_eligibility_score">This is necessary to calculate your\neligibility score</string>
    <string name="product_education_nscreens">Product Education\nScreens</string>
    <string name="cheq_is_a_financial_platform_to_manage_nyour_credit_payments">CheQ is a financial platform to manage\nyour credit payments.</string>
    <string name="we_have_found_the_following">We Have Found The Following</string>
    <string name="disable_inactive_not_in_use_cards_amp_bnpl"><![CDATA[Disable inactive/not in use cards & BNPL]]></string>
    <string name="cards">Cards</string>
    <string name="bnpls">BNPLS</string>
    <string name="Continue">Continue</string>
    <string name="your_data_is_100_safe_and_secure" tools:ignore="DuplicateDefinition">Your Data is 100% Safe and Secure</string>
    <string name="confirm_your_details">Confirm Your Details</string>
    <string name="please_verify_your_pan_amp_dob_n_they_should_be_same_as_that_on_your_pan_n_card"><![CDATA[Please verify your PAN & DOB. They should be same as that on your PAN Card.]]></string>
    <string name="bbspr8120d">ABCDE1234F</string>
    <string name="_11_may_1991">11 MAY 1991</string>
    <string name="activate_to_win_flat_200_coins">Activate to Win! Flat 200 coins.</string>
    <string name="almost_done_well_done">Almost done! Well done!</string>
    <string name="i_ll_permit_this">I’ll Permit This</string>
    <string name="okay_let_me_try_this_again">Okay, let me try this again</string>
    <string name="cheq_would_like_access_nfollowing_permissions">“Cheq” would like to access\nfollowing permissions</string>
    <string name="make_amp_recevie_call"><![CDATA[Make & Receive call]]></string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_quisque">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque</string>
    <string name="read_sms">Read SMS</string>
    <string name="allow_permissions">ALLOW</string>
    <string name="getting_started">Getting Started</string>
    <string name="hii">Hi, Welcome</string>
    <string name="sign_in">Sign in to your account.</string>
    <string name="we_need_your_mobile_number_linked_to_nyour_credit_cards_and_pay_later_products">We need your mobile number linked to\nyour credit cards and Pay Later Products</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="i_approve_cheq_to_check_my_credit_information_from_rbi_approved_credit_bureaus_nthis_action_will_not_impact_your_credit_nscore">I approve CheQ to check my Credit information from RBI approved credit bureaus\nThis action will not impact your credit\nscore.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="first_name">First Name</string>
    <string name="hint_first_name">John</string>
    <string name="last_name">Last Name</string>
    <string name="hint_last_name">Doe</string>
    <string name="email_id">Email</string>
    <string name="note_we_do_not_send_promotional_nemails">Note: We do not send promotional\nemails</string>
    <string name="cheq_is_a_financial_platform_to_manage_your_ncredit_payments">CheQ is a financial platform to manage\nyour credit payments.</string>
    <string name="otp_authentication">OTP Authentication</string>
    <string name="or">Or</string>
    <string name="request_a_call">Request a call</string>
    <string name="your_date_of_birth">Your Date of Birth</string>
    <string name="please_wait">Please wait…</string>
    <string name="my_profile">My Profile</string>
    <string name="activate">ACTIVATE</string>
    <string name="logout">Logout</string>
    <string name="enable_cheq_protect">Enable CheQ protect</string>
    <string name="total_due">Total Due</string>
    <string name="_2_00_000">₹2,00,000</string>
    <string name="_60_000">₹60,000</string>
    <string name="min">Min</string>
    <string name="pay">Pay</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="data_security_policy">Data Security Policy</string>
    <string name="tnc_s">TnC’s</string>
    <string name="raise_an_issue">Raise an Issue</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">name</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="hdfc_millennia">HDFC Millennia</string>
    <string name="_5318">5318</string>
    <string name="due_date_fri_dec_10">due Date Fri, Dec 10</string>
    <string name="_15_000">₹15,000</string>
    <string name="_12_25">__/__</string>
    <string name="naman_rampal">NAMAN RAMPAL</string>
    <string name="your_pan_card_number">Your Pan Card Number</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="profile_details">Profile details</string>
    <string name="payment_method">Payment Method</string>
    <string name="tanner_buchanan">Tanner Buchanan</string>
    <string name="_0812_345_6789">0812 345 6789</string>
    <string name="shana_gmail_com">Shana@gmail.com</string>
    <string name="bbspr100293">BBSPR100293</string>
    <string name="save_changes">Save Changes</string>
    <string name="rewards">Rewards</string>
    <string name="_22_000">₹22,000</string>
    <string name="extra_rs_150_on_flipkart_end_of_nseason_sale">Extra Rs.150 on Flipkart End of\nSeason Sale</string>
    <string name="valid_till_25_jan_2022">Valid till: 25 Jan 2022</string>
    <string name="min_order_899">₹ Min Order: 899</string>
    <string name="how_to_redeem">How To Redeem</string>
    <string name="_1_integer_eget_nunc_imperdiet_fermentum_erat_ac">1. Integer eget nunc imperdiet, fermentum erat ac</string>
    <string name="_3_sed_ut_nisl_eu_velit_maximus_ullamcorper_ac_eget_metu">3. Sed ut nisl eu velit maximus ullamcorper ac eget metu</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_policies"><![CDATA[Terms & Policies]]></string>
    <string name="_2_integer_eget_nunc_imperdiet_fermentum_erat_ac">2. Integer eget nunc imperdiet, fermentum erat ac</string>
    <string name="_3_in_non_lorem_efficitur_convallis_lorem_eget_placerat">3.In non lorem efficitur, convallis lorem eget, placerat</string>
    <string name="_4_sed_ut_nisl_eu_velit_maximus_ullamcorper_ac_eget_metu">4. Sed ut nisl eu velit maximus ullamcorper ac eget metu</string>
    <string name="avail_for_200_points">Avail For 200 Points</string>
    <string name="extra_rs_150_on_flipkart_nend_of_season_sale">Extra Rs.150 on Flipkart\nEnd of Season Sale</string>
    <string name="unable_to_find_details">Unable To Find Details</string>
    <string name="unable_to_find_a_bureau_record_with_the_ninformation_provided_by_you">Unable to find a bureau record with the\ninformation provided by you.</string>
    <string name="profile_dob_cancel">Cancel</string>
    <string name="profile_dob_sure">Sure</string>
    <string name="full">Full</string>
    <string name="DOB">DOB</string>
    <string name="coming_from">COMING_FROM</string>
    <string name="pancard_activity">"PAN_CARD_ACTIVITY"</string>
    <string name="you_will_earn_cheq_rewards"><font color='#A2A0A8'>You will earn /n</font> <font color='#193A4A'>CheQ Rewards</font></string>
    <string name="cancel">CANCEL</string>
    <string name="Yes">YES</string>
    <string name="exit">Exit App</string>
    <string name="application"> application?</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="click_yes">Click on Yes to continue</string>
    <string name="max">MAX</string>
    <string name="due_date">Due Date</string>
    <string name="min_capital">MIN</string>
    <string name="skip_now">Skip Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="_0">₹0</string>
    <string name="__0">0</string>
    <string name="card_npoint">CARD \nPOINTS</string>
    <string name="spend_nanalyzer">SPEND \nANALYZER</string>
    <string name="set_nautopay">SET \nAUTOPAY</string>
    <string name="resend">Resend</string>
    <string name="confirm">CONFIRM</string>
    <string name="setup_auto_pay_for_your_hdfc_millennia">Setup auto pay for your HDFC Millennia</string>
    <string name="please_setup_emandate_first_for_autopay">Please setup eMandate first for autopay.</string>
    <string name="one_time_setup_to_automate_your_bill_payment">One-time setup to automate your bill\npayment</string>
    <string name="amount_due_will_be_auto_debited_from_your_bank_account">Amount due will be auto-debited\nfrom your bank account</string>
    <string name="we_will_notify_you_before_your_due_date_so_you_keep_funds_in_the_account">We will notify you before your due\ndate so you keep funds in the\naccount</string>
    <string name="points">Points</string>
    <string name="done">DONE</string>
    <string name="gmail">Gmail</string>
    <string name="email_hint">abcd@gmail.com</string>
    <string name="are_you_sure_to_delink_your_email_id">Are you sure to delink your email-id?</string>
    <string name="delink_caption">Delinking email-id will restrict us from keeping your bank statements up-to-date.This will take 24 hours time.</string>
    <string name="delink">DE-LINK</string>
    <string name="delete_my_acnt">Delete my account</string>
    <string name="are_you_sure_delete">Are you sure you want to delete your account?</string>
    <string name="delete_entire_record">This can\’t be undone. We will delete all your records on CheQ, along with any personal data</string>
    <string name="do_not_Delete">Do not delete</string>
    <string name="try_again">try again</string>
    <string name="do_you_wish_to_continue">Do you wish to continue?</string>
    <string name="cannot_be_linked_another_acnt">This card cannot be linked to another account on CheQ</string>
    <string name="yes_remove">"Yes, Remove "</string>
    <string name="no_cancel">No, cancel</string>
    <string name="linking">Linking...</string>
    <string name="cheq_safe_email_linking_failed">CheQ Safe email linking failed</string>
    <string name="please_try_linking_your_email_id_again">Please try linking your email id again.</string>
    <string name="check_icon_email_linking">Check Icon for email linking success</string>
</resources>