<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_bottom_sheet_new"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:contentDescription="@string/cancel"
        app:srcCompat="@drawable/ic_close" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/processingAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="visible"
        app:lottie_autoPlay="true"
         app:lottie_repeatCount="1"
        app:lottie_rawRes="@raw/link_failed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/basiercircle_semibold"
        android:text="@string/cheq_safe_email_linking_failed"
        android:textColor="@color/colorTextTitle"
        android:textSize="@dimen/_17sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_6sdp"
        app:fontFamily="@font/basiercircle_regular"
        android:text="@string/please_try_linking_your_email_id_again"
        android:textColor="@color/colorGreyText"
        android:textSize="@dimen/_11sdp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        style="@style/GlobalButtonStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/button_color_primary"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:visibility="visible" />
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>