<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_bottom_sheet_new"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/basiercircle_medium"
        android:text="@string/are_you_sure_logout"
        android:textColor="@color/ref_txt_color"
        android:textSize="@dimen/_15sdp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            style="@style/SettingButtonStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/button_color_green_outlined"
            android:text="@string/confirm"
            android:textColor="@color/color_green" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/SettingButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/button_color_green_solid"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>