<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomsheet_google_signin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:elevation="15dp"
        android:layout_margin="@dimen/_17sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_margin="@dimen/_17sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_17sdp"
        android:layout_height="@dimen/_17sdp"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginVertical="@dimen/_17sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/close" />

        <TextView
            style="@style/FontExtraBoldDarkBlue24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/setup_auto_pay_for_your_hdfc_millennia"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:layout_marginVertical="@dimen/_17sdp"
            style="@style/FontExtraBoldBlue12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/please_setup_emandate_first_for_autopay"
            android:textColorHint="@color/colorAccent" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:src="@drawable/ic_autopay" />


                <TextView
                    android:layout_marginStart="@dimen/_7sdp"
                    style="@style/FontLightBlack14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:maxLines="3"
                    android:text="@string/one_time_setup_to_automate_your_bill_payment" />

            </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_18sdp"
            android:background="@color/color_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_autopay" />


            <TextView
                android:layout_marginStart="@dimen/_7sdp"
                style="@style/FontLightBlack14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:maxLines="3"
                android:text="@string/amount_due_will_be_auto_debited_from_your_bank_account" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_18sdp"
            android:background="@color/color_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_autopay" />


            <TextView
                android:layout_marginStart="@dimen/_7sdp"
                style="@style/FontLightBlack14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:maxLines="3"
                android:text="@string/we_will_notify_you_before_your_due_date_so_you_keep_funds_in_the_account" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_18sdp"
            android:background="@color/color_view"/>

        <Button
            android:id="@+id/button"
            android:layout_marginBottom="@dimen/_15sdp"
            style="@style/GlobalButtonStyle"
            android:backgroundTint="@color/grey"
            android:text="@string/next" />



    </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>